--- a/background.html
+++ b/background.html
@@ -67,15 +67,9 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="icons">
-					<li><a href="https://www.facebook.com/profile.php?id=100014283816040"><span class="label"><i class="fab fa-facebook-f"></i></a>
-						</span>
-					</li>
-					<li><a href="https://github.com/averyfe"><span class="label"><i class="fab fa-github"></i></a>
-						</span>
-					</li>
-					<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><span class="label"><i class="fab fa-linkedin-in"></i></a>
-						</span>
-					</a></li>
+					<li><a href="https://www.facebook.com/profile.php?id=100014283816040"><span class="label"><i class="fab fa-facebook-f"></i></span></a></li>
+					<li><a href="https://github.com/averyfe"><span class="label"><i class="fab fa-github"></i></span></a></li>
+					<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><span class="label"><i class="fab fa-linkedin-in"></i></span></a></li>
 				</ul>
 			</div>
 		</footer>
