--- a/index.html
+++ b/index.html
@@ -123,12 +123,9 @@
 
 	<footer id="footer">
 		<ul class="icons">
-			<li><a href="https://www.facebook.com/profile.php?id=100014283816040"><i class="fab fa-facebook-f"></i></a>
-			</li>
-			<li><a href="https://github.com/averyfe"><i class="fab fa-github"></i></a>
-			</li>
-			<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><i class="fab fa-linkedin-in"></i></a>
-				</a></li>
+			<li><a href="https://www.facebook.com/profile.php?id=100014283816040"><i class="fab fa-facebook-f"></i></a></li>
+			<li><a href="https://github.com/averyfe"><i class="fab fa-github"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><i class="fab fa-linkedin-in"></i></a></li>
 		</ul>
 	</footer>
 
