--- a/project.html
+++ b/project.html
@@ -55,7 +55,7 @@
             <!-- CARD #2 -->
             <div class="project-card">
               <div class="project-image">
-                <img id="image1" src="images/sample.jpg" alt="" />
+                <img id="image2" src="images/sample.jpg" alt="" />
               </div>
               <div class="project-content">
                 <h4>Yelp Recommendation System using Collaborative Filtering</h4>
@@ -68,7 +68,7 @@
             <!-- CARD #3 -->
             <div class="project-card">
               <div class="project-image">
-                <img id="image1" src="images/sample.jpg" alt="" />
+                <img id="image3" src="images/sample.jpg" alt="" />
               </div>
               <div class="project-content">
                 <h4>Refugee Information Management Platform based on Django </h4>
@@ -84,15 +84,9 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="icons">
-					<li><a href="https://www.facebook.com/profile.php?id=100014283816040"><span class="label"><i class="fab fa-facebook-f"></i></a>
-						</span>
-					</li>
-					<li><a href="https://github.com/averyfe"><span class="label"><i class="fab fa-github"></i></a>
-						</span>
-					</li>
-					<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><span class="label"><i class="fab fa-linkedin-in"></i></a>
-						</span>
-					</a></li>
+					<li><a href="https://www.facebook.com/profile.php?id=100014283816040"><span class="label"><i class="fab fa-facebook-f"></i></span></a></li>
+					<li><a href="https://github.com/averyfe"><span class="label"><i class="fab fa-github"></i></span></a></li>
+					<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><span class="label"><i class="fab fa-linkedin-in"></i></span></a></li>
 				</ul>
 			</div>
 		</footer>
