--- a/background.html
+++ b/background.html
@@ -28,48 +28,50 @@
 			<a href="gallery.html">Gallery</a>
 		</header>
 		
-		<section id="banner">
-			<h4>Shuwan Feng</h4>
-			<!-- <ul class="actions">
-				<li><a href="#" class="button big special">Learn More</a></li>
-			</ul> -->
-		</section>
+		<main id="main">
+			<section id="banner">
+				<h1>Shuwan Feng</h1>
+				<!-- <ul class="actions">
+					<li><a href="#" class="button big special">Learn More</a></li>
+				</ul> -->
+			</section>
 
-		<section id="main">
-			<div class="parallax"></div>
-			<div id="grid1">
-				<div class="school">
-					<p>University of Michigan, Ann Arbor,2019-2021(expected)<br />
-					School of Information<br />
-					Master of Schience in Information<br />
-					Major Courses:Data Manipulation; Information Visualization; Data Mining<br />
-					</p>
+			<section id="background">
+				<div class="parallax"></div>
+				<div id="grid1">
+					<div class="school">
+						<p>University of Michigan, Ann Arbor,2019-2021(expected)<br />
+						School of Information<br />
+						Master of Schience in Information<br />
+						Major Courses:Data Manipulation; Information Visualization; Data Mining<br />
+						</p>
+					</div>
+					<div class = "school">
+						<p>Shanghai JiaoTong University, 2016-2020(expected)<br />
+							University of Michigan and Shanghai JiaoTong University Joint Institute<br />
+							Bachelor of Science in Electronic and Computer engineering<br />
+							Major Courses:Probability and Statistics, Discrete Math, Data Structure, Computer Organization<br />
+						</p>
+					</div>
+					<div class="skill">
+						<ul>
+							<li>Programming and skills: Python, R, matlab, SQL, C++, HTML, CSS, Javascript, Java, Go, Mathematics, SAS </li>
+							<li>Packages/Libraries: Numpy, pandas, Tensorflow, Scikit Learn, keras, PyTorch,OpenCV, Matplotlib, ggplot, seaborn, plotly, D3.js </li>
+							<li>Big data: Hadoop, Spark , MapReduce, HDFS </li>
+							<li>Language: Mandarin (native), English, German beginner  </li>
+						</ul>
+					</div>
 				</div>
-				<div class = "school">
-					<p>Shanghai JiaoTong University, 2016-2020(expected)<br />
-						University of Michigan and Shanghai JiaoTong University Joint Institute<br />
-						Bachelor of Science in Electronic and Computer engineering<br />
-						Major Courses:Probability and Statistics, Discrete Math, Data Structure, Computer Organization<br />
-					</p>
-				</div>
-				<div class="skill">
-					<ul>
-						<li>Programming and skills: Python, R, matlab, SQL, C++, HTML, CSS, Javascript, Java, Go, Mathematics, SAS </li>
-						<li>Packages/Libraries: Numpy, pandas, Tensorflow, Scikit Learn, keras, PyTorch,OpenCV, Matplotlib, ggplot, seaborn, plotly, D3.js </li>
-						<li>Big data: Hadoop, Spark , MapReduce, HDFS </li>
-						<li>Language: Mandarin (native), English, German beginner  </li>
-					</ul>
-				</div>
-			</div>
-	
-		</section>
+		
+			</section>
+		</main>
 
 		<footer id="footer">
 			<div class="inner">
 				<ul class="icons">
-					<li><a href="https://www.facebook.com/profile.php?id=100014283816040"><span class="label"><i class="fab fa-facebook-f"></i></span></a></li>
-					<li><a href="https://github.com/averyfe"><span class="label"><i class="fab fa-github"></i></span></a></li>
-					<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><span class="label"><i class="fab fa-linkedin-in"></i></span></a></li>
+					<li><a href="https://www.facebook.com/profile.php?id=100014283816040" aria-label="Facebook><span class="label"><i class="fab fa-facebook-f"></i></span></a></li>
+					<li><a href="https://github.com/averyfe"><span class="label"><i class="fab fa-github" aria-label="github"></i></span></a></li>
+					<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><span class="label" aria-label="linkedin"><i class="fab fa-linkedin-in"></i></span></a></li>
 				</ul>
 			</div>
 		</footer>
