--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 	<main id="main">
 		<section id="banner">
-			<h4>Shuwan Feng</h4>
+			<h1>Shuwan Feng</h1>
 			<!-- <ul class="actions">
 						<li><a href="#" class="button big special">Learn More</a></li>
 					</ul> -->
@@ -47,7 +47,7 @@
 										<span class="image"><img src="images/1.jpg" alt="1.jpg" /></span>
 								</div>
 								<div class="flip-card-back">
-								<h3>University of Michigan</h3>
+								<h2>University of Michigan</h2>
 								</div>
 							</div>
 						</div>
@@ -71,7 +71,7 @@
 										<span class="image"><img src="images/2.jpg" alt="2.jpg" /></span>
 								</div>
 								<div class="flip-card-back">
-								<h3>Shanghai JiaoTong University</h3>
+								<h2>Shanghai JiaoTong University</h2>
 								</div>
 							</div>
 						</div>
@@ -112,9 +112,9 @@
 		<section id="three" class="contact-form">
 			<h2>Working Contact</h2>
 			<form action="https://formspree.io/mvoqrbvk" method="POST">
-				<input class="contact-input contact-name" name="name" placeholder="Your Name" type="text" />
-				<input class="contact-input contact-email" name="email" placeholder="Your Email" type="email" />
-				<textarea class="contact-input" name="message" placeholder="Your Message" rows="4"></textarea>
+				<input class="contact-input contact-name" name="name" placeholder="Your Name" type="text" aria-label="Name"/>
+				<input class="contact-input contact-email" name="email" placeholder="Your Email" type="email" aria-label="Email"/>
+				<textarea class="contact-input" name="message" placeholder="Your Message" rows="4" aria-label="Message"></textarea>
 				<input type="submit" class="submit" value="Submit" />
 				<input type="reset" class="reset" value="Reset" />
 			</form>
@@ -123,9 +123,9 @@
 
 	<footer id="footer">
 		<ul class="icons">
-			<li><a href="https://www.facebook.com/profile.php?id=100014283816040"><i class="fab fa-facebook-f"></i></a></li>
-			<li><a href="https://github.com/averyfe"><i class="fab fa-github"></i></a></li>
-			<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><i class="fab fa-linkedin-in"></i></a></li>
+			<li><a href="https://www.facebook.com/profile.php?id=100014283816040" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+			<li><a href="https://github.com/averyfe"><i class="fab fa-github" aria-label="github"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/" aria-label="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
 		</ul>
 	</footer>
 
