--- a/project.html
+++ b/project.html
@@ -27,66 +27,69 @@
 			<a href="gallery.html">Gallery</a>
 		</header>
 		
-		<section id="banner">
-			<h4>Shuwan Feng</h4>
-			<!-- <ul class="actions">
-				<li><a href="#" class="button big special">Learn More</a></li>
-			</ul> -->
-		</section>
+		<main id="main">
+		
+			<section id="banner">
+				<h1>Shuwan Feng</h1>
+				<!-- <ul class="actions">
+					<li><a href="#" class="button big special">Learn More</a></li>
+				</ul> -->
+			</section>
 
-		<section id="main" class="wrapper">
-			<header class="major special">
-				<h2>My Project</h2>
-			</header>
-			<div class="project_body">
-            <!-- CARD #1 -->
-            <div class="project-card">
-              <div class="project-image">
-                <img id="image1" src="images/sample.jpg" alt="" />
-              </div>
-              <div class="project-content">
-                <h4>Stock Price Prediction  Model using Full Connected Neural Network</h4>
-                <ul>
-					<li>FCN Algorithm implementation based on tensorflow in python  </li>
-					<li>Stock price prediction model test and result analysis based on R  </li>
-				</ul>                
-              </div>
-            </div>
-            <!-- CARD #2 -->
-            <div class="project-card">
-              <div class="project-image">
-                <img id="image2" src="images/sample.jpg" alt="" />
-              </div>
-              <div class="project-content">
-                <h4>Yelp Recommendation System using Collaborative Filtering</h4>
-                <ul>
-					<li>Run MapReduce jobs on Hadoop to clean, modify, and classify Yelp dataset using Mrjob  </li>
-					<li>Implement collaborative filtering model using matrix factorization based on the ALS algorithm with Spark MLlib   </li>
-				</ul>                 
-              </div>
-            </div>
-            <!-- CARD #3 -->
-            <div class="project-card">
-              <div class="project-image">
-                <img id="image3" src="images/sample.jpg" alt="" />
-              </div>
-              <div class="project-content">
-                <h4>Refugee Information Management Platform based on Django </h4>
-                <ul>
-					<li>Implement a Web App to take Excels and automatically generate statistical refugee information form based on Django  </li>
-					<li>Develop front-end web using HTML, CSS, Javascript and optimize user interface </li>
-				</ul>                
-              </div>
-            </div>
-          </div>
-		</section>
+			<section id="project" class="wrapper">
+				<header class="major special">
+					<h2>My Project</h2>
+				</header>
+				<div class="project_body">
+				<!-- CARD #1 -->
+				<div class="project-card">
+				  <div class="project-image">
+					<img id="image1" src="images/sample.jpg" alt="" />
+				  </div>
+				  <div class="project-content">
+					<h2>Stock Price Prediction  Model using Full Connected Neural Network</h2>
+					<ul>
+						<li>FCN Algorithm implementation based on tensorflow in python  </li>
+						<li>Stock price prediction model test and result analysis based on R  </li>
+					</ul>                
+				  </div>
+				</div>
+				<!-- CARD #2 -->
+				<div class="project-card">
+				  <div class="project-image">
+					<img id="image2" src="images/sample.jpg" alt="" />
+				  </div>
+				  <div class="project-content">
+					<h2>Yelp Recommendation System using Collaborative Filtering</h2>
+					<ul>
+						<li>Run MapReduce jobs on Hadoop to clean, modify, and classify Yelp dataset using Mrjob  </li>
+						<li>Implement collaborative filtering model using matrix factorization based on the ALS algorithm with Spark MLlib   </li>
+					</ul>                 
+				  </div>
+				</div>
+				<!-- CARD #3 -->
+				<div class="project-card">
+				  <div class="project-image">
+					<img id="image3" src="images/sample.jpg" alt="" />
+				  </div>
+				  <div class="project-content">
+					<h2>Refugee Information Management Platform based on Django </h2>
+					<ul>
+						<li>Implement a Web App to take Excels and automatically generate statistical refugee information form based on Django  </li>
+						<li>Develop front-end web using HTML, CSS, Javascript and optimize user interface </li>
+					</ul>                
+				  </div>
+				</div>
+			  </div>
+			</section>
+		</main>
 
 		<footer id="footer">
 			<div class="inner">
 				<ul class="icons">
-					<li><a href="https://www.facebook.com/profile.php?id=100014283816040"><span class="label"><i class="fab fa-facebook-f"></i></span></a></li>
-					<li><a href="https://github.com/averyfe"><span class="label"><i class="fab fa-github"></i></span></a></li>
-					<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><span class="label"><i class="fab fa-linkedin-in"></i></span></a></li>
+					<li><a href="https://www.facebook.com/profile.php?id=100014283816040" aria-label="Facebook><span class="label"><i class="fab fa-facebook-f"></i></span></a></li>
+					<li><a href="https://github.com/averyfe"><span class="label"><i class="fab fa-github" aria-label="github"></i></span></a></li>
+					<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><span class="label" aria-label="linkedin"><i class="fab fa-linkedin-in"></i></span></a></li>
 				</ul>
 			</div>
 		</footer>
