--- a/gallery.html
+++ b/gallery.html
@@ -27,42 +27,44 @@
 			<a href="gallery.html">Gallery</a>
 		</header>
 		
-		<section id="banner">
-			<h4>Shuwan Feng</h4>
-			<!-- <ul class="actions">
-				<li><a href="#" class="button big special">Learn More</a></li>
-			</ul> -->
-		</section>
+		<main id="main">
+			<section id="banner">
+				<h1>Shuwan Feng</h1>
+				<!-- <ul class="actions">
+					<li><a href="#" class="button big special">Learn More</a></li>
+				</ul> -->
+			</section>
 
-		<section id="main" class="wrapper">
-			<div class="container">
-				<header class="major special">
-					<h2>My Travel Photo Gallery</h2>
-				</header>
-				<div class="image-grid">
-					<a href="#" class="image"><img src="images/3.jpg" alt="3.jpg" /></a>
-					<a href="#" class="image"><img src="images/4.jpg" alt="4.jpg" /></a>
-					<a href="#" class="image"><img src="images/5.jpg" alt="5.jpg" /></a>
-					<a href="#" class="image"><img src="images/6.jpg" alt="6.jpg" /></a>
-					<a href="#" class="image"><img src="images/7.jpg" alt="7.jpg" /></a>
-					<a href="#" class="image"><img src="images/8.jpg" alt="8.jpg" /></a>
-					<a href="#" class="image"><img src="images/9.jpg" alt="9.jpg" /></a>
-					<a href="#" class="image"><img src="images/10.jpg" alt="10.jpg" /></a>
-					<a href="#" class="image"><img src="images/11.jpg" alt="11.jpg" /></a>
-					<a href="#" class="image"><img src="images/12.jpg" alt="12.jpg" /></a>
-					<a href="#" class="image"><img src="images/13.jpg" alt="13.jpg" /></a>
-					<a href="#" class="image"><img src="images/14.jpg" alt="14.jpg" /></a>
+			<section id="gallery" class="wrapper">
+				<div class="container">
+					<header class="major special">
+						<h2>My Travel Photo Gallery</h2>
+					</header>
+					<div class="image-grid">
+						<a href="#" class="image"><img src="images/3.jpg" alt="3.jpg" /></a>
+						<a href="#" class="image"><img src="images/4.jpg" alt="4.jpg" /></a>
+						<a href="#" class="image"><img src="images/5.jpg" alt="5.jpg" /></a>
+						<a href="#" class="image"><img src="images/6.jpg" alt="6.jpg" /></a>
+						<a href="#" class="image"><img src="images/7.jpg" alt="7.jpg" /></a>
+						<a href="#" class="image"><img src="images/8.jpg" alt="8.jpg" /></a>
+						<a href="#" class="image"><img src="images/9.jpg" alt="9.jpg" /></a>
+						<a href="#" class="image"><img src="images/10.jpg" alt="10.jpg" /></a>
+						<a href="#" class="image"><img src="images/11.jpg" alt="11.jpg" /></a>
+						<a href="#" class="image"><img src="images/12.jpg" alt="12.jpg" /></a>
+						<a href="#" class="image"><img src="images/13.jpg" alt="13.jpg" /></a>
+						<a href="#" class="image"><img src="images/14.jpg" alt="14.jpg" /></a>
+					</div>
 				</div>
-			</div>
-		</section>
+			</section>
+		</main>
 
 			
 		<footer id="footer">
 			<div class="inner">
 				<ul class="icons">
-					<li><a href="https://www.facebook.com/profile.php?id=100014283816040"><span class="label"><i class="fab fa-facebook-f"></i></span></a></li>
-					<li><a href="https://github.com/averyfe"><span class="label"><i class="fab fa-github"></i></span></a></li>
-					<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><span class="label"><i class="fab fa-linkedin-in"></i></span></a></li>
+					<li><a href="https://www.facebook.com/profile.php?id=100014283816040" aria-label="Facebook><span class="label"><i class="fab fa-facebook-f"></i></span></a></li>
+					<li><a href="https://github.com/averyfe"><span class="label"><i class="fab fa-github" aria-label="github"></i></span></a></li>
+					<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><span class="label" aria-label="linkedin"><i class="fab fa-linkedin-in"></i></span></a></li>
 				</ul>
 			</div>
 		</footer>
