--- a/background.html
+++ b/background.html
@@ -67,13 +67,11 @@
 		</main>
 
 		<footer id="footer">
-			<div class="inner">
-				<ul class="icons">
-					<li><a href="https://www.facebook.com/profile.php?id=100014283816040" aria-label="Facebook><span class="label"><i class="fab fa-facebook-f"></i></span></a></li>
-					<li><a href="https://github.com/averyfe"><span class="label"><i class="fab fa-github" aria-label="github"></i></span></a></li>
-					<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/"><span class="label" aria-label="linkedin"><i class="fab fa-linkedin-in"></i></span></a></li>
-				</ul>
-			</div>
+			<ul class="icons">
+				<li><a href="https://www.facebook.com/profile.php?id=100014283816040" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+				<li><a href="https://github.com/averyfe" aria-label="github"><i class="fab fa-github"></i></a></li>
+				<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/" aria-label="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+			</ul>
 		</footer>
 	</body>
 </html>
