--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	<footer id="footer">
 		<ul class="icons">
 			<li><a href="https://www.facebook.com/profile.php?id=100014283816040" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-			<li><a href="https://github.com/averyfe"><i class="fab fa-github" aria-label="github"></i></a></li>
+			<li><a href="https://github.com/averyfe" aria-label="github"><i class="fab fa-github"></i></a></li>
 			<li><a href="https://www.linkedin.com/in/shuwan-feng-05421319a/" aria-label="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
 		</ul>
 	</footer>
