--- a/background.html
+++ b/background.html
@@ -23,7 +23,7 @@
 		    <img src="images/logo.png" alt="logo" id = "logo">
 			<a href="#main">Skip to content</a>
 			<a href="index.html">Home</a>
-			<a href="background.html">Background</a>
+			<a href="background.html"><b><u>Background</u></b></a>
 			<a href="project.html">Project</a>
 			<a href="gallery.html">Gallery</a>
 		</header>
