--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
 <body class="landing">
 	<header id="header" class="alt">
-	    <img src="images/logo.png" alt="logo" id = "logo">
+		<img src="images/logo.png" alt="logo" id = "logo">
 		<a href="#main">Skip to content</a>
-		<a href="index.html">Home</a>
-		<a href="background.html">Background</a>
-		<a href="project.html">Project</a>
-		<a href="gallery.html">Gallery</a>
+		<li class="nav_item"><a href="index.html"><b><u>Home</u></b></a>
+		<li class="nav_item"><a href="background.html">Background</a>
+		<li class="nav_item"><a href="project.html">Project</a>
+		<li class="nav_item"><a href="gallery.html">Gallery</a>
 	</header>
 
 	<main id="main">
