--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@
 			<a href="#main">Skip to content</a>
 			<a href="index.html">Home</a>
 			<a href="background.html">Background</a>
-			<a href="project.html">Project</a>
+			<a href="project.html"><b><u>Project</u></b></a>
 			<a href="gallery.html">Gallery</a>
 		</header>
 		
