--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
 			<a href="index.html">Home</a>
 			<a href="background.html">Background</a>
 			<a href="project.html">Project</a>
-			<a href="gallery.html">Gallery</a>
+			<a href="gallery.html"><b><u>Gallery</u></b></a>
 		</header>
 		
 		<main id="main">
