--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 	<header id="header" class="alt">
 		<img src="images/logo.png" alt="logo" id = "logo">
 		<a href="#main">Skip to content</a>
-		<li class="nav_item"><a href="index.html"><b><u>Home</u></b></a>
-		<li class="nav_item"><a href="background.html">Background</a>
-		<li class="nav_item"><a href="project.html">Project</a>
-		<li class="nav_item"><a href="gallery.html">Gallery</a>
+		<a href="index.html"><b><u>Home</u></b></a>
+		<a href="background.html">Background</a>
+		<a href="project.html">Project</a>
+		<a href="gallery.html">Gallery</a>
 	</header>
 
 	<main id="main">
